<resources>
    <string name="app_name">Barokah Store</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="calculate">Hitung</string>
    <string name="result">Hasil</string>
    <string name="length">Panjang</string>
    <string name="cari">cari</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="tambah_harga_barang">tambah harga barang</string>
    <string name="nama_barang">nama barang</string>
    <string name="harga_barang">harga barang</string>
    <string name="keterangan_satuan">keterangan satuan</string>
    <string name="keterangan">keterangan</string>
    <string name="ok">ok</string>
    <string name="loading">Loading</string>
    <string name="judul_barang">Judul barang</string>
    <string name="harga">harga</string>
    <string name="edit">edit</string>
    <string name="hapus">hapus</string>
</resources>