<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".input_pricelist.NewPriceListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNamaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_barang"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtHargaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/harga_barang"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtKeteranganSatuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/keterangan_satuan"
                android:inputType="textCapSentences"
                android:textAppearance="?attr/textAppearanceBody1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtKeterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/keterangan"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="?attr/textAppearanceBody1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateNewPriceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/tambah_harga_barang" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>